clusters/managed/llm/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: mgd-llm
spec:
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      protocol: TCP
  type: LoadBalancer
