clusters/managed/llm/ollama/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-ingressroute
  namespace: mgd-llm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: LLM
    gethomepage.dev/name: Ollama
    gethomepage.dev/description: "Model runtime"
    gethomepage.dev/icon: ollama
    gethomepage.dev/href: "https://ollama.trusted.nirmalhk7.com"
    gethomepage.dev/weight: "20"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`ollama.trusted.nirmalhk7.com`)
      kind: Rule
      middlewares:
        - name: mgd-ratelimit
          namespace: default
        - name: mgd-headervalidation
          namespace: default
      services:
        - name: ollama
          port: 11434
